feat: enhance file type validation and error handling for uploads (#476)
* feat: enhance file type validation and error handling for uploads

* feat: add support for advanced image formats and enhance file type validation

--- a/src/renderer/i18n/locales/ar/translation.json
+++ b/src/renderer/i18n/locales/ar/translation.json
@@ -54,12 +54,15 @@
   "API Mode": "وضع API",
   "api path": "مسار API",
   "API Path": "مسار API",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "تنسيقات الصور المتقدمة غير مدعومة. يرجى التحويل إلى JPG أو PNG.",
+  "Archive files are not supported. Please extract and upload individual files.": "ملفات الأرشيف غير مدعومة. يرجى استخراج ورفع الملفات الفردية.",
   "Are you sure you want to delete the knowledge base": "هل أنت متأكد أنك تريد حذف قاعدة المعرفة؟",
   "Are you sure you want to delete this server?": "هل أنت متأكد أنك تريد حذف هذا الخادم؟",
   "Arguments": "حجج",
   "assistant": "المساعد",
   "Attach Image": "إرفاق صورة",
   "Attach Link": "إرفاق رابط",
+  "Audio files are not supported": "ملفات الصوت غير مدعومة",
   "Auther Message": "مرحباً! لقد صنعت Chatbox لاستخدامي الشخصي ويسعدني أن أرى الكثير من الناس يستمتعون به! إذا كنت ترغب في دعم التطوير، سيكون التبرع موضع تقدير كبير، على الرغم من أنه اختياري تماماً. شكراً جزيلاً، Benn.",
   "Authorization was rejected. Please try again if you want to login.": "تم رفض التفويض. يرجى المحاولة مرة أخرى إذا كنت ترغب في تسجيل الدخول.",
   "Auto": "تلقائي",
@@ -81,6 +84,7 @@
   "Back to Previous": "العودة إلى السابق",
   "Back to previous message": "العودة إلى الرسالة السابقة",
   "Beta updates": "تحديثات بيتا",
+  "Binary/executable files are not supported": "الملفات الثنائية/التنفيذية غير مدعومة",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "يتم توفير بحث Bing للاستخدام المجاني، ولكن قد تكون له قيود وهو عرضة للتغيير من قبل Microsoft.",
   "Browsing and retrieving information from the internet.": "تصفح الويب، واسترجاع المعلومات من الإنترنت.",
   "Builtin MCP Servers": "خوادم MCP المدمجة",
@@ -345,6 +349,7 @@
   "Invalid provider configuration format": "تنسيق تكوين الموفر غير صالح",
   "Invalid request parameters detected. Please try again later. Persistent failures may indicate an outdated software version. Consider upgrading to access the latest performance improvements and features.": "تم اكتشاف معلمات طلب غير صالحة. يرجى المحاولة مرة أخرى لاحقًا. قد تشير الإخفاقات المستمرة إلى إصدار برنامج قديم. فكر في الترقية للوصول إلى أحدث تحسينات الأداء والميزات.",
   "It only takes a few seconds and helps a lot.": "يستغرق هذا بضع ثوانٍ فقط ويساعد كثيرًا.",
+  "iWork files (Pages, Keynote) are not supported. Please export to PDF or Office format.": "ملفات iWork (Pages، Keynote) غير مدعومة. يرجى التصدير إلى تنسيق PDF أو Office.",
   "Keep only the Top <input /> Conversations in List and Permanently Delete the Rest": "احتفظ فقط بأعلى <input /> محادثات في القائمة واحذف الباقي نهائيًا",
   "Key Combination": "مزيج المفاتيح",
   "Keyboard Shortcuts": "اختصارات لوحة المفاتيح",
@@ -705,6 +710,7 @@
   "Unlock Copilot Avatar by Upgrading to Premium Edition": "افتح صورة مساعد الطيار عن طريق الترقية إلى الإصدار المميز",
   "Unsaved settings": "الإعدادات غير المحفوظة",
   "unstar": "إزالة النجمة",
+  "Unsupported file type: {{fileName}}": "نوع الملف غير مدعوم: {{fileName}}",
   "Untitled": "بلا عنوان",
   "Update Available": "تحديث متاح",
   "Upload failed: {{error}}": "فشل التحميل: {{error}}",
@@ -720,6 +726,7 @@
   "User Avatar": "صورة رمزية للمستخدم",
   "User Terms": "شروط المستخدم",
   "version": "الإصدار",
+  "Video files are not supported": "ملفات الفيديو غير مدعومة",
   "View All Copilots": "عرض جميع مساعدي الطيارين",
   "View historical threads": "عرض المحادثات التاريخية",
   "View Message JSON": "عرض رسالة JSON",
