--- a/src/renderer/i18n/locales/de/translation.json
+++ b/src/renderer/i18n/locales/de/translation.json
@@ -54,12 +54,15 @@
   "API Mode": "API-Modus",
   "api path": "API-Pfad",
   "API Path": "API Pfad",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Erweiterte Bildformate werden nicht unterstützt. Bitte konvertieren Sie zu JPG oder PNG.",
+  "Archive files are not supported. Please extract and upload individual files.": "Archivdateien werden nicht unterstützt. Bitte extrahieren Sie die Dateien und laden Sie sie einzeln hoch.",
   "Are you sure you want to delete the knowledge base": "Möchten Sie die Wissensdatenbank wirklich löschen?",
   "Are you sure you want to delete this server?": "Sind Sie sicher, dass Sie diesen Server löschen möchten?",
   "Arguments": "Argumente",
   "assistant": "Assistent",
   "Attach Image": "Bild anhängen",
   "Attach Link": "Link anhängen",
+  "Audio files are not supported": "Audiodateien werden nicht unterstützt",
   "Auther Message": "Ich habe Chatbox für meinen eigenen Gebrauch entwickelt und es ist großartig zu sehen, dass so viele Leute es genießen! Wenn Sie die Entwicklung unterstützen möchten, ist eine Spende sehr willkommen, aber völlig optional. Vielen Dank, Benn",
   "Authorization was rejected. Please try again if you want to login.": "Autorisierung wurde abgelehnt. Bitte versuchen Sie es erneut, wenn Sie sich anmelden möchten.",
   "Auto": "Auto",
@@ -81,6 +84,7 @@
   "Back to Previous": "Zum vorherigen Thema zurückkehren",
   "Back to previous message": "Zurück zur vorherigen Nachricht",
   "Beta updates": "Beta Aktualisierungen",
+  "Binary/executable files are not supported": "Binärdateien/ausführbare Dateien werden nicht unterstützt",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Die Bing-Suche wird kostenlos zur Verfügung gestellt, kann jedoch Einschränkungen unterliegen und von Microsoft geändert werden.",
   "Browsing and retrieving information from the internet.": "Durchsuche und hole Informationen aus dem Internet.",
   "Builtin MCP Servers": "Eingebaute MCP Server",
@@ -345,6 +349,7 @@
   "Invalid provider configuration format": "Ungültiges Anbieterkonfigurationsformat",
   "Invalid request parameters detected. Please try again later. Persistent failures may indicate an outdated software version. Consider upgrading to access the latest performance improvements and features.": "Ungültige Anforderungsparameter erkannt. Bitte versuchen Sie es später erneut. Persistente Fehler können auf eine veraltete Softwareversion hinweisen. Erwägen Sie ein Upgrade, um auf die neuesten Leistungsverbesserungen und Funktionen zuzugreifen.",
   "It only takes a few seconds and helps a lot.": "Es dauert nur wenige Sekunden und hilft sehr.",
+  "iWork files (Pages, Keynote) are not supported. Please export to PDF or Office format.": "iWork-Dateien (Pages, Keynote) werden nicht unterstützt. Bitte exportieren Sie in das PDF- oder Office-Format.",
   "Keep only the Top <input /> Conversations in List and Permanently Delete the Rest": "Behalte nur die obersten <input /> Konversationen in der Liste und lösche den Rest dauerhaft",
   "Key Combination": "Tastenkombination",
   "Keyboard Shortcuts": "Tastenkombinationen",
@@ -706,6 +711,7 @@
   "Unlock Copilot Avatar by Upgrading to Premium Edition": "Schalten Sie den Co-Piloten-Avatar durch ein Upgrade auf die Premium-Edition frei",
   "Unsaved settings": "Ungespeicherte Einstellungen",
   "unstar": "Entfernen aus Favoriten",
+  "Unsupported file type: {{fileName}}": "Nicht unterstützter Dateityp: {{fileName}}",
   "Untitled": "Unbenannt",
   "Update Available": "Update verfügbar",
   "Upload failed: {{error}}": "Upload fehlgeschlagen: {{error}}",
@@ -721,6 +727,7 @@
   "User Avatar": "Benutzer-Avatar",
   "User Terms": "Nutzungsbedingungen",
   "version": "Version",
+  "Video files are not supported": "Videodateien werden nicht unterstützt",
   "View All Copilots": "Alle Co-Piloten anzeigen",
   "View historical threads": "Historische Threads anzeigen",
   "View Message JSON": "Nachricht JSON anzeigen",
