--- a/src/renderer/i18n/locales/en/translation.json
+++ b/src/renderer/i18n/locales/en/translation.json
@@ -38,11 +38,14 @@
   "API Key is required to check connection": "API Key is required to check connection",
   "API Mode": "API Mode",
   "API Path": "API Path",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Advanced image formats are not supported. Please convert to JPG or PNG.",
+  "Archive files are not supported. Please extract and upload individual files.": "Archive files are not supported. Please extract and upload individual files.",
   "Are you sure you want to delete the knowledge base": "Are you sure you want to delete the knowledge base",
   "Are you sure you want to delete this server?": "Are you sure you want to delete this server?",
   "Arguments": "Arguments",
   "Attach Image": "Attach Image",
   "Attach Link": "Attach Link",
+  "Audio files are not supported": "Audio files are not supported",
   "Authorization was rejected. Please try again if you want to login.": "Authorization was rejected. Please try again if you want to login.",
   "Auto": "Auto",
   "Auto (Use Chat Model)": "Auto (Use Chat Model)",
@@ -60,6 +63,7 @@
   "Back to Previous": "Back to Previous",
   "Back to previous message": "Back to previous message",
   "Beta updates": "Beta updates",
+  "Binary/executable files are not supported": "Binary/executable files are not supported",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.",
   "Builtin MCP Servers": "Builtin MCP Servers",
   "By continuing, you agree to our": "By continuing, you agree to our",
@@ -290,6 +294,7 @@
   "Invalid deep link config format": "Invalid deep link config format",
   "Invalid provider configuration format": "Invalid provider configuration format",
   "It only takes a few seconds and helps a lot.": "It only takes a few seconds and helps a lot.",
+  "iWork files (Pages, Keynote) are not supported. Please export to PDF or Office format.": "iWork files (Pages, Keynote) are not supported. Please export to PDF or Office format.",
   "Keep only the Top <input /> Conversations in List and Permanently Delete the Rest": "Keep only the Top <input /> Conversations in List and Permanently Delete the Rest",
   "Knowledge Base": "Knowledge Base",
   "Knowledge Base Debug": "Knowledge Base Debug",
@@ -599,6 +604,7 @@
   "Unknown error": "Unknown error",
   "unknown error tips": "Unknown Error. Please check your AI settings and account status, or <0>click here to view the FAQ document</0>.",
   "unstar": "unstar",
+  "Unsupported file type: {{fileName}}": "Unsupported file type: {{fileName}}",
   "Update Available": "Update Available",
   "Upload failed: {{error}}": "Upload failed: {{error}}",
   "Upload Image": "Upload Image",
@@ -611,6 +617,7 @@
   "Used to preprocess image files, requires models with vision capabilities enabled": "Used to preprocess image files, requires models with vision capabilities enabled",
   "User Avatar": "User Avatar",
   "User Terms": "User Terms",
+  "Video files are not supported": "Video files are not supported",
   "View All Copilots": "View All Copilots",
   "View Message JSON": "View Message JSON",
   "View More Plans": "View More Plans",
