--- a/src/renderer/i18n/locales/es/translation.json
+++ b/src/renderer/i18n/locales/es/translation.json
@@ -54,12 +54,15 @@
   "API Mode": "Modo de API",
   "api path": "Ruta de API",
   "API Path": "Ruta de API",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Los formatos de imagen avanzados no son compatibles. Por favor, convierta a JPG o PNG.",
+  "Archive files are not supported. Please extract and upload individual files.": "Los archivos comprimidos no son compatibles. Por favor, extraiga y cargue los archivos individuales.",
   "Are you sure you want to delete the knowledge base": "¿Estás seguro de que quieres eliminar la base de conocimiento?",
   "Are you sure you want to delete this server?": "¿Está seguro de que quiere eliminar este servidor?",
   "Arguments": "Argumentos",
   "assistant": "Asistente",
   "Attach Image": "Adjuntar imagen",
   "Attach Link": "Adjuntar enlace",
+  "Audio files are not supported": "Los archivos de audio no son compatibles",
   "Auther Message": "¡Hola! Hice Chatbox para mi propio uso y es genial ver a tantas personas disfrutándolo. Si deseas apoyar el desarrollo, una donación sería muy apreciada, aunque es completamente opcional. Muchas gracias, Benn.",
   "Authorization was rejected. Please try again if you want to login.": "Autorización rechazada. Por favor, inténtelo de nuevo si desea iniciar sesión.",
   "Auto": "Automático",
@@ -81,6 +84,7 @@
   "Back to Previous": "Volver al anterior",
   "Back to previous message": "Volver al mensaje anterior",
   "Beta updates": "Actualizaciones beta",
+  "Binary/executable files are not supported": "Archivos binarios/ejecutables no son compatibles",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Bing Search se proporciona de forma gratuita, pero puede tener limitaciones y está sujeto a cambios por parte de Microsoft.",
   "Browsing and retrieving information from the internet.": "Navegación web, búsqueda y recuperación de información de internet.",
   "Builtin MCP Servers": "Servidores MCP Integrados",
@@ -345,6 +349,7 @@
   "Invalid provider configuration format": "Formato de configuración de proveedor inválido",
   "Invalid request parameters detected. Please try again later. Persistent failures may indicate an outdated software version. Consider upgrading to access the latest performance improvements and features.": "Se detectaron parámetros de solicitud no válidos. Por favor, inténtelo de nuevo más tarde. Los fallos persistentes pueden indicar una versión de software obsoleta. Considere actualizar para acceder a las últimas mejoras de rendimiento y funciones.",
   "It only takes a few seconds and helps a lot.": "Esto solo toma unos segundos y es muy útil.",
+  "iWork files (Pages, Keynote) are not supported. Please export to PDF or Office format.": "Los archivos iWork (Pages, Keynote) no son compatibles. Exporte a formato PDF u Office.",
   "Keep only the Top <input /> Conversations in List and Permanently Delete the Rest": "Mantener solo las primeras <input /> conversaciones de la lista y eliminar permanentemente el resto",
   "Key Combination": "Combinación de teclas",
   "Keyboard Shortcuts": "Atajos de teclado",
@@ -705,6 +710,7 @@
   "Unlock Copilot Avatar by Upgrading to Premium Edition": "Desbloquea el avatar del copiloto actualizando a la edición Premium",
   "Unsaved settings": "Ajustes no guardados",
   "unstar": "Quitar destacado",
+  "Unsupported file type: {{fileName}}": "Tipo de archivo no compatible: {{fileName}}",
   "Untitled": "Sin título",
   "Update Available": "Actualización disponible",
   "Upload failed: {{error}}": "Error al cargar: {{error}}",
@@ -720,6 +726,7 @@
   "User Avatar": "Avatar del usuario",
   "User Terms": "Términos del usuario",
   "version": "Versión",
+  "Video files are not supported": "Los archivos de vídeo no son compatibles",
   "View All Copilots": "Ver todos los copilotos",
   "View historical threads": "Ver hilos históricos",
   "View Message JSON": "Ver Mensaje JSON",
