--- a/src/renderer/i18n/locales/it-IT/translation.json
+++ b/src/renderer/i18n/locales/it-IT/translation.json
@@ -54,12 +54,15 @@
   "API Mode": "Modalità API",
   "api path": "Percorso API",
   "API Path": "Percorso API",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "I formati immagine avanzati non sono supportati. Si prega di convertire in JPG o PNG.",
+  "Archive files are not supported. Please extract and upload individual files.": "I file di archivio non sono supportati. Si prega di estrarre e caricare i singoli file.",
   "Are you sure you want to delete the knowledge base": "Vuoi davvero eliminare la base di conoscenza",
   "Are you sure you want to delete this server?": "Sei sicuro di voler eliminare questo server?",
   "Arguments": "Argomenti",
   "assistant": "Assistente",
   "Attach Image": "Allega immagine",
   "Attach Link": "Allega link",
+  "Audio files are not supported": "I file audio non sono supportati",
   "Auther Message": "Ciao! Ho creato Chatbox per uso personale ed è fantastico vedere così tante persone che lo apprezzano! Se desideri supportare lo sviluppo, una donazione sarebbe molto apprezzata, anche se è completamente facoltativa. Molte grazie, Benn.",
   "Authorization was rejected. Please try again if you want to login.": "L'autorizzazione è stata rifiutata. Riprova se desideri accedere.",
   "Auto": "Automatico",
@@ -81,6 +84,7 @@
   "Back to Previous": "Torna al precedente",
   "Back to previous message": "Torni al messaggio precedente",
   "Beta updates": "Aggiornamenti beta",
+  "Binary/executable files are not supported": "I file binari/eseguibili non sono supportati",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Bing Search è fornito per uso gratuito, ma potrebbe avere delle limitazioni ed è soggetto a modifiche da parte di Microsoft.",
   "Browsing and retrieving information from the internet.": "Navigazione web, ricerca e recupero di informazioni da internet.",
   "Builtin MCP Servers": "Server MCP Integrati",
@@ -344,6 +348,7 @@
   "Invalid provider configuration format": "Formato di configurazione del provider non valido",
   "Invalid request parameters detected. Please try again later. Persistent failures may indicate an outdated software version. Consider upgrading to access the latest performance improvements and features.": "Rilevati parametri di richiesta non validi. Per favore, riprova più tardi. Errori persistenti potrebbero indicare una versione del software obsoleta. Considera di aggiornare per accedere agli ultimi miglioramenti delle prestazioni e alle nuove funzionalità.",
   "It only takes a few seconds and helps a lot.": "Ci vuole solo un minuto e aiuta molto.",
+  "iWork files (Pages, Keynote) are not supported. Please export to PDF or Office format.": "I file iWork (Pages, Keynote) non sono supportati. Si prega di esportare in formato PDF o Office.",
   "Keep only the Top <input /> Conversations in List and Permanently Delete the Rest": "Mantieni solo le prime <input /> conversazioni nell'elenco ed elimina definitivamente le restanti",
   "Key Combination": "Combinazione di tasti",
   "Keyboard Shortcuts": "Scorciatoie da tastiera",
@@ -703,6 +708,7 @@
   "Unlock Copilot Avatar by Upgrading to Premium Edition": "Sblocca l'avatar del Copilot aggiornando all'edizione Premium",
   "Unsaved settings": "Impostazioni non salvate",
   "unstar": "Rimuovi dai preferiti",
+  "Unsupported file type: {{fileName}}": "Tipo di file non supportato: {{fileName}}",
   "Untitled": "Senza titolo",
   "Update Available": "Aggiornamento disponibile",
   "Upload failed: {{error}}": "Caricamento fallito: {{error}}",
@@ -718,6 +724,7 @@
   "User Avatar": "Avatar utente",
   "User Terms": "Termini dell'utente",
   "version": "Versione",
+  "Video files are not supported": "File video non supportati",
   "View All Copilots": "Visualizza tutti i Copilot",
   "View historical threads": "Visualizza thread storici",
   "View Message JSON": "Visualizza JSON messaggio",
