--- a/src/renderer/i18n/locales/ja/translation.json
+++ b/src/renderer/i18n/locales/ja/translation.json
@@ -54,12 +54,15 @@
   "API Mode": "APIモード",
   "api path": "APIパス",
   "API Path": "API パス",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "高度な画像形式はサポートされていません。JPG または PNG に変換してください。",
+  "Archive files are not supported. Please extract and upload individual files.": "アーカイブファイルはサポートされていません。個々のファイルを展開してアップロードしてください。",
   "Are you sure you want to delete the knowledge base": "ナレッジベースを本当に削除しますか",
   "Are you sure you want to delete this server?": "このサーバーを削除してもよろしいですか？",
   "Arguments": "引数",
   "assistant": "アシスタント",
   "Attach Image": "画像を添付",
   "Attach Link": "リンクを添付",
+  "Audio files are not supported": "音声ファイルはサポートされていません",
   "Auther Message": "私は自分のためにChatboxを作りましたが、多くの人々がそれを楽しんでいるのを見るのは素晴らしいことです！開発を支援したい方は、寄付をいただければ大変ありがたいですが、全く任意です。多くの感謝、Benn",
   "Authorization was rejected. Please try again if you want to login.": "認証が拒否されました。再度ログインをお試しください。",
   "Auto": "自動",
@@ -81,6 +84,7 @@
   "Back to Previous": "前のスレッドに戻る",
   "Back to previous message": "前のメッセージに戻る",
   "Beta updates": "ベータ更新",
+  "Binary/executable files are not supported": "バイナリ/実行可能ファイルはサポートされていません",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Bing検索は無料で提供されていますが、制限がある場合があり、Microsoftによって変更される場合があります。",
   "Browsing and retrieving information from the internet.": "Webブラウジング中、インターネットから情報を検索しています。",
   "Builtin MCP Servers": "内蔵MCPサーバー",
@@ -345,6 +349,7 @@
   "Invalid provider configuration format": "無効な提供方構成形式",
   "Invalid request parameters detected. Please try again later. Persistent failures may indicate an outdated software version. Consider upgrading to access the latest performance improvements and features.": "無効なリクエストパラメータが検出されました。後で再試行してください。持続的な失敗は、古いソフトウェアバージョンを示す可能性があります。最新のパフォーマンスの向上と機能にアクセスするためにアップグレードを検討してください。",
   "It only takes a few seconds and helps a lot.": "これはたった数秒で、大きな助けになります。",
+  "iWork files (Pages, Keynote) are not supported. Please export to PDF or Office format.": "iWorkファイル（Pages、Keynote）はサポートされていません。PDFまたはOffice形式にエクスポートしてください。",
   "Keep only the Top <input /> Conversations in List and Permanently Delete the Rest": "リスト内の上位 <input /> 件の会話のみを保持し、残りを完全に削除する",
   "Key Combination": "キーの組み合わせ",
   "Keyboard Shortcuts": "キーボードショートカット",
@@ -706,6 +711,7 @@
   "Unlock Copilot Avatar by Upgrading to Premium Edition": "プレミアムエディションにアップグレードしてコパイロットアバターを解除",
   "Unsaved settings": "未保存の設定",
   "unstar": "スター解除",
+  "Unsupported file type: {{fileName}}": "サポートされていないファイル形式: {{fileName}}",
   "Untitled": "無題",
   "Update Available": "更新が利用可能",
   "Upload failed: {{error}}": "アップロードに失敗しました: {{error}}",
@@ -721,6 +727,7 @@
   "User Avatar": "ユーザーアバター",
   "User Terms": "ユーザー規約",
   "version": "バージョン",
+  "Video files are not supported": "動画ファイルはサポートされていません",
   "View All Copilots": "すべてのコパイロットを表示",
   "View historical threads": "過去のスレッドを表示",
   "View Message JSON": "メッセージ JSON を表示",
