--- a/src/renderer/i18n/locales/ru/translation.json
+++ b/src/renderer/i18n/locales/ru/translation.json
@@ -54,12 +54,15 @@
   "API Mode": "Режим API",
   "api path": "путь API",
   "API Path": "Путь API",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Расширенные форматы изображений не поддерживаются. Пожалуйста, конвертируйте в JPG или PNG.",
+  "Archive files are not supported. Please extract and upload individual files.": "Архивные файлы не поддерживаются. Пожалуйста, извлеките и загрузите отдельные файлы.",
   "Are you sure you want to delete the knowledge base": "Вы уверены, что хотите удалить базу знаний",
   "Are you sure you want to delete this server?": "Вы уверены, что хотите удалить этот сервер?",
   "Arguments": "Аргументы",
   "assistant": "Ассистент",
   "Attach Image": "Прикрепить изображение",
   "Attach Link": "Прикрепить ссылку",
+  "Audio files are not supported": "Аудиофайлы не поддерживаются",
   "Auther Message": "Я создал Chatbox для своего собственного использования, и рад видеть, что так много людей получают удовольствие от него! Если вы хотите поддержать разработку, пожертвование будет очень ценным, хотя это абсолютно необязательно. Большое спасибо, Benn",
   "Authorization was rejected. Please try again if you want to login.": "Авторизация отклонена. Пожалуйста, попробуйте еще раз, если вы хотите войти.",
   "Auto": "Авто",
@@ -81,6 +84,7 @@
   "Back to Previous": "Вернуться к Предыдущему",
   "Back to previous message": "Вернуться к предыдущему сообщению",
   "Beta updates": "Бета обновления",
+  "Binary/executable files are not supported": "Бинарные/исполняемые файлы не поддерживаются",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Поиск Bing предоставляется бесплатно, но он может иметь ограничения и может быть изменен корпорацией Майкрософт.",
   "Browsing and retrieving information from the internet.": "Веб-браузер, просматривает и извлекает информацию из интернета.",
   "Builtin MCP Servers": "Встроенные MCP Серверы",
@@ -345,6 +349,7 @@
   "Invalid provider configuration format": "Неверный формат конфигурации провайдера",
   "Invalid request parameters detected. Please try again later. Persistent failures may indicate an outdated software version. Consider upgrading to access the latest performance improvements and features.": "Обнаружены недопустимые параметры запроса. Пожалуйста, попробуйте снова позже. Постоянные сбои могут указывать на устаревшую версию программного обеспечения. Рассмотрите возможность обновления для доступа к последним улучшениям производительности и функциям.",
   "It only takes a few seconds and helps a lot.": "Это займет всего несколько секунд и очень поможет.",
+  "iWork files (Pages, Keynote) are not supported. Please export to PDF or Office format.": "Файлы iWork (Pages, Keynote) не поддерживаются. Пожалуйста, экспортируйте в формат PDF или Office.",
   "Keep only the Top <input /> Conversations in List and Permanently Delete the Rest": "Сохранить только <input /> последних бесед в списке и безвозвратно удалить остальные",
   "Key Combination": "Комбинация клавиш",
   "Keyboard Shortcuts": "Горячие клавиши",
@@ -706,6 +711,7 @@
   "Unlock Copilot Avatar by Upgrading to Premium Edition": "Разблокируйте аватар Copilot, обновившись до премиум версии",
   "Unsaved settings": "Не сохраненные настройки",
   "unstar": "Удалить из избранного",
+  "Unsupported file type: {{fileName}}": "Неподдерживаемый тип файла: {{fileName}}",
   "Untitled": "Без названия",
   "Update Available": "Доступно обновление",
   "Upload failed: {{error}}": "Не удалось загрузить: {{error}}",
@@ -721,6 +727,7 @@
   "User Avatar": "Аватар пользователя",
   "User Terms": "Условия использования",
   "version": "Версия",
+  "Video files are not supported": "Видеофайлы не поддерживаются",
   "View All Copilots": "Просмотреть всех Copilots",
   "View historical threads": "Просмотреть историю тем",
   "View Message JSON": "Просмотреть JSON сообщения",
