--- a/src/renderer/i18n/locales/sv/translation.json
+++ b/src/renderer/i18n/locales/sv/translation.json
@@ -54,12 +54,15 @@
   "API Mode": "API-läge",
   "api path": "API-sökväg",
   "API Path": "API Sökväg",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Avancerade bildformat stöds inte. Vänligen konvertera till JPG eller PNG.",
+  "Archive files are not supported. Please extract and upload individual files.": "Arkivfiler stöds inte. Vänligen packa upp och ladda upp enskilda filer.",
   "Are you sure you want to delete the knowledge base": "Är du säker på att du vill ta bort kunskapsbasen",
   "Are you sure you want to delete this server?": "Är du säker på att du vill radera den här servern?",
   "Arguments": "Argument",
   "assistant": "Assistent",
   "Attach Image": "Bifoga bild",
   "Attach Link": "Bifoga länk",
+  "Audio files are not supported": "Ljudfiler stöds inte",
   "Auther Message": "Hej! Jag skapade Chatbox för eget bruk och det är fantastiskt att se så många som använder den! Om du vill stödja utvecklingen skulle en donation vara mycket uppskattad, men det är helt frivilligt. Tack så mycket, Benn.",
   "Authorization was rejected. Please try again if you want to login.": "Auktoriseringen nekades. Försök igen om du vill logga in.",
   "Auto": "Automatisk",
@@ -81,6 +84,7 @@
   "Back to Previous": "Tillbaka till föregående",
   "Back to previous message": "Tillbaka till föregående meddelande",
   "Beta updates": "Beta uppdateringar",
+  "Binary/executable files are not supported": "Binära/körbara filer stöds inte",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Bing Sök erbjuds gratis att använda, men det kan ha begränsningar och kan komma att ändras av Microsoft.",
   "Browsing and retrieving information from the internet.": "Browsar och hämtar information från internet.",
   "Builtin MCP Servers": "Inbyggda MCP Servrar",
@@ -345,6 +349,7 @@
   "Invalid provider configuration format": "Ogiltigt format på leverantörskonfiguration",
   "Invalid request parameters detected. Please try again later. Persistent failures may indicate an outdated software version. Consider upgrading to access the latest performance improvements and features.": "Ogiltiga förfrågningsparametrar upptäcktes. Vänligen försök igen senare. Upprepade fel kan tyda på en föråldrad programversion. Överväg att uppgradera för att få tillgång till de senaste prestandaförbättringarna och funktionerna.",
   "It only takes a few seconds and helps a lot.": "Det tar bara några sekunder och hjälper mycket.",
+  "iWork files (Pages, Keynote) are not supported. Please export to PDF or Office format.": "iWork-filer (Pages, Keynote) stöds inte. Exportera till PDF- eller Office-format.",
   "Keep only the Top <input /> Conversations in List and Permanently Delete the Rest": "Behåll endast de översta <input /> konversationerna i listan och radera resten permanent",
   "Key Combination": "Tangentkombination",
   "Keyboard Shortcuts": "Kortkommandon",
@@ -706,6 +711,7 @@
   "Unmaximize": "Återställ",
   "Unsaved settings": "Olagrade inställningar",
   "unstar": "Ta bort stjärnmärkning",
+  "Unsupported file type: {{fileName}}": "Filtyp som inte stöds: {{fileName}}",
   "Untitled": "Namnlös",
   "Update Available": "Uppdatering tillgänglig",
   "Upload failed: {{error}}": "Uppladdning misslyckades: {{error}}",
@@ -721,6 +727,7 @@
   "User Avatar": "Användaravatar",
   "User Terms": "Användarvillkor",
   "version": "Version",
+  "Video files are not supported": "Videofiler stöds inte",
   "View All Copilots": "Visa alla Copilots",
   "View historical threads": "Visa trådhistorik",
   "View Message JSON": "Visa meddelande JSON",
