--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -54,12 +54,15 @@
   "API Mode": "API 模式",
   "api path": "API 路径",
   "API Path": "API 路径",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "高级图片格式不支持。请转换为 JPG 或 PNG 格式。",
+  "Archive files are not supported. Please extract and upload individual files.": "不支持压缩文件。请解压并上传单个文件。",
   "Are you sure you want to delete the knowledge base": "你确定要删除知识库吗",
   "Are you sure you want to delete this server?": "你确定要删除这个服务器吗？",
   "Arguments": "参数",
   "assistant": "助手",
   "Attach Image": "添加图片",
   "Attach Link": "添加链接",
+  "Audio files are not supported": "不支持音频文件",
   "Auther Message": "“刚开始我只是想开发一个方便自己使用的小工具，没想到会有那么多人喜欢它！如果你愿意支持我的开发工作，可以适当进行捐赠，非常感谢。”",
   "Authorization was rejected. Please try again if you want to login.": "授权被拒绝。如果您想登录，请重试。",
   "Auto": "自动",
@@ -81,6 +84,7 @@
   "Back to Previous": "回到上个话题",
   "Back to previous message": "定位到上一条消息",
   "Beta updates": "Beta 更新",
+  "Binary/executable files are not supported": "二进制/可执行文件不支持",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Bing Search 免费提供使用，但可能存在限制并由 Microsoft 决定更改。",
   "Browsing and retrieving information from the internet.": "正在从互联网中浏览和检索信息。",
   "Builtin MCP Servers": "内置 MCP 服务器",
@@ -345,6 +349,7 @@
   "Invalid provider configuration format": "无效的提供方配置格式",
   "Invalid request parameters detected. Please try again later. Persistent failures may indicate an outdated software version. Consider upgrading to access the latest performance improvements and features.": "检测到无效的请求参数。请稍后重试。如果多次失败可能表明当前软件版本过低，请升级以获得最新的功能与性能增强。",
   "It only takes a few seconds and helps a lot.": "只需几秒钟，并且非常有帮助。",
+  "iWork files (Pages, Keynote) are not supported. Please export to PDF or Office format.": "iWork 文件 (Pages、Keynote) 不支持。请导出为 PDF 或 Office 格式。",
   "Keep only the Top <input /> Conversations in List and Permanently Delete the Rest": "只保留列表中最顶部的 <input /> 个对话，并永久删除其余",
   "Key Combination": "按键",
   "Keyboard Shortcuts": "键盘快捷键",
@@ -716,6 +721,7 @@
   "Unmaximize": "还原",
   "Unsaved settings": "未保存的设置",
   "unstar": "取消星标",
+  "Unsupported file type: {{fileName}}": "不支持的文件类型：{{fileName}}",
   "Untitled": "未命名",
   "Update Available": "更新可用",
   "Upload failed: {{error}}": "上传失败：{{error}}",
@@ -732,6 +738,7 @@
   "User Avatar": "用户头像",
   "User Terms": "用户条款",
   "version": "版本",
+  "Video files are not supported": "视频文件不支持",
   "View All Copilots": "查看所有搭档",
   "View historical threads": "查看历史话题",
   "View Message JSON": "查看消息 JSON",
