--- a/src/renderer/i18n/locales/zh-Hant/translation.json
+++ b/src/renderer/i18n/locales/zh-Hant/translation.json
@@ -54,12 +54,15 @@
   "API Mode": "API 模式",
   "api path": "API 路徑",
   "API Path": "API 路徑",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "高級圖片格式不支援。請轉換為 JPG 或 PNG 格式。",
+  "Archive files are not supported. Please extract and upload individual files.": "壓縮檔不支援。請解壓縮並上傳個別檔案。",
   "Are you sure you want to delete the knowledge base": "您確定要刪除知識庫嗎",
   "Are you sure you want to delete this server?": "您確定要刪除這個伺服器嗎？",
   "Arguments": "參數",
   "assistant": "助理",
   "Attach Image": "附加圖片",
   "Attach Link": "添加鏈接",
+  "Audio files are not supported": "音訊檔案不支援",
   "Auther Message": "「剛開始我只是想開發一個方便自己使用的小工具，沒想到會有那麼多人喜歡它！如果你願意支持我的開發工作，可以適當進行捐贈，非常感謝。」",
   "Authorization was rejected. Please try again if you want to login.": "授權被拒絕。如果您想登入，請再試一次。",
   "Auto": "自動化",
@@ -81,6 +84,7 @@
   "Back to Previous": "回到上個話題",
   "Back to previous message": "定位到上一條消息",
   "Beta updates": "Beta 更新",
+  "Binary/executable files are not supported": "二進位/可執行檔不支援",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Bing 搜尋免費提供使用，但可能存在限制並可能隨 Microsoft 調整。",
   "Browsing and retrieving information from the internet.": "正在從互聯網中瀏覽和檢索信息。",
   "Builtin MCP Servers": "內建 MCP 伺服器",
@@ -345,6 +349,7 @@
   "Invalid provider configuration format": "無效的提供方配置格式",
   "Invalid request parameters detected. Please try again later. Persistent failures may indicate an outdated software version. Consider upgrading to access the latest performance improvements and features.": "檢測到無效的請求參數。請稍後重試。持續的失敗可能表明您的軟件版本過時。考慮升級以獲取最新的性能改進和功能。",
   "It only takes a few seconds and helps a lot.": "只需幾秒鐘，並且非常有幫助。",
+  "iWork files (Pages, Keynote) are not supported. Please export to PDF or Office format.": "iWork 檔案 (Pages、Keynote) 不支援。請匯出為 PDF 或 Office 格式。",
   "Keep only the Top <input /> Conversations in List and Permanently Delete the Rest": "保留列表中前 <input /> 個對話，並永久刪除其餘對話",
   "Key Combination": "按鍵",
   "Keyboard Shortcuts": "鍵盤快捷鍵",
@@ -711,6 +716,7 @@
   "Unmaximize": "还原",
   "Unsaved settings": "未保存的設置",
   "unstar": "取消星標",
+  "Unsupported file type: {{fileName}}": "不支援的檔案類型：{{fileName}}",
   "Untitled": "未命名",
   "Update Available": "更新可用",
   "Upload failed: {{error}}": "上傳失敗：{{error}}",
@@ -726,6 +732,7 @@
   "User Avatar": "使用者頭像",
   "User Terms": "使用者條款",
   "version": "版本",
+  "Video files are not supported": "不支援影片檔案",
   "View All Copilots": "查看所有搭檔",
   "View historical threads": "查看歷史話題",
   "View Message JSON": "檢視訊息 JSON",
