--- a/src/renderer/i18n/locales/fr/translation.json
+++ b/src/renderer/i18n/locales/fr/translation.json
@@ -54,12 +54,15 @@
   "API Mode": "Mode API",
   "api path": "Chemin de l'API",
   "API Path": "Chemin de l'API",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Les formats d'image avancés ne sont pas pris en charge. Veuillez convertir en JPG ou PNG.",
+  "Archive files are not supported. Please extract and upload individual files.": "Les fichiers d'archive ne sont pas pris en charge. Veuillez extraire et télécharger les fichiers individuels.",
   "Are you sure you want to delete the knowledge base": "Voulez-vous vraiment supprimer la base de connaissances",
   "Are you sure you want to delete this server?": "Voulez-vous vraiment supprimer ce serveur ?",
   "Arguments": "Arguments",
   "assistant": "Assistant",
   "Attach Image": "Joindre une Image",
   "Attach Link": "Joindre un lien",
+  "Audio files are not supported": "Les fichiers audio ne sont pas pris en charge",
   "Auther Message": "J'ai créé Chatbox pour mon usage personnel et il est génial de voir autant de personnes l'apprécier ! Si vous souhaitez soutenir le développement, un don serait grandement apprécié, bien que cela soit entièrement facultatif. Un grand merci, Benn",
   "Authorization was rejected. Please try again if you want to login.": "L'autorisation a été rejetée. Veuillez réessayer si vous souhaitez vous connecter.",
   "Auto": "Automatique",
@@ -81,6 +84,7 @@
   "Back to Previous": "Retour au Sujet Précédent",
   "Back to previous message": "Retour au message précédent",
   "Beta updates": "Mises à jour bêta",
+  "Binary/executable files are not supported": "Fichiers binaires/exécutables non pris en charge",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "La recherche Bing est fournie gratuitement, mais elle peut avoir des limitations et est sujette à modification par Microsoft.",
   "Browsing and retrieving information from the internet.": "Navigation web, recherche et récupération d'informations sur internet.",
   "Builtin MCP Servers": "Serveurs MCP Intégrés",
@@ -345,6 +349,7 @@
   "Invalid provider configuration format": "Format de configuration du fournisseur invalide",
   "Invalid request parameters detected. Please try again later. Persistent failures may indicate an outdated software version. Consider upgrading to access the latest performance improvements and features.": "Des paramètres de requête invalides ont été détectés. Veuillez réessayer plus tard. Des échecs persistants peuvent indiquer une version obsolète du logiciel. Envisagez de mettre à niveau pour accéder aux dernières améliorations de performances et fonctionnalités.",
   "It only takes a few seconds and helps a lot.": "Cela ne prend que quelques secondes et est très utile.",
+  "iWork files (Pages, Keynote) are not supported. Please export to PDF or Office format.": "Les fichiers iWork (Pages, Keynote) ne sont pas pris en charge. Veuillez exporter au format PDF ou Office.",
   "Keep only the Top <input /> Conversations in List and Permanently Delete the Rest": "Garder seulement les <input /> premières conversations de la liste et supprimer définitivement le reste",
   "Key Combination": "Combinaison de touches",
   "Keyboard Shortcuts": "Raccourcis clavier",
@@ -706,6 +711,7 @@
   "Unlock Copilot Avatar by Upgrading to Premium Edition": "Débloquez l'avatar du copilote en passant à l'édition Premium",
   "Unsaved settings": "Paramètres non enregistrés",
   "unstar": "Retirer l'étoile",
+  "Unsupported file type: {{fileName}}": "Type de fichier non pris en charge : {{fileName}}",
   "Untitled": "Sans titre",
   "Update Available": "Mise à jour disponible",
   "Upload failed: {{error}}": "Échec de l'envoi : {{error}}",
@@ -721,6 +727,7 @@
   "User Avatar": "Avatar de l'utilisateur",
   "User Terms": "Conditions d'utilisation",
   "version": "Version",
+  "Video files are not supported": "Fichiers vidéo non pris en charge",
   "View All Copilots": "Voir tous les copilotes",
   "View historical threads": "Voir les sujets historiques",
   "View Message JSON": "Voir le JSON du message",
