--- a/src/renderer/i18n/locales/ko/translation.json
+++ b/src/renderer/i18n/locales/ko/translation.json
@@ -54,12 +54,15 @@
   "API Mode": "API 모드",
   "api path": "API 경로",
   "API Path": "API 경로",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "고급 이미지 형식은 지원되지 않습니다. JPG 또는 PNG로 변환해 주세요.",
+  "Archive files are not supported. Please extract and upload individual files.": "압축 파일은 지원되지 않습니다. 개별 파일을 추출하여 업로드해 주세요.",
   "Are you sure you want to delete the knowledge base": "지식 기반을 정말 삭제하시겠습니까?",
   "Are you sure you want to delete this server?": "정말로 이 서버를 삭제하시겠습니까?",
   "Arguments": "인수",
   "assistant": "어시스턴트",
   "Attach Image": "이미지 첨부",
   "Attach Link": "링크 첨부",
+  "Audio files are not supported": "오디오 파일은 지원되지 않습니다.",
   "Auther Message": "Chatbox는 제 개인적인 용도로 만들었고 많은 사람들이 즐기는 것을 보는 것이 정말 좋습니다! 개발을 지원하고 싶으시다면, 기부를 진심으로 환영합니다. 그러나 기부는 완전히 선택 사항입니다. 감사합니다, Benn",
   "Authorization was rejected. Please try again if you want to login.": "인증이 거부되었습니다. 로그인하시려면 다시 시도해주세요.",
   "Auto": "자동",
@@ -81,6 +84,7 @@
   "Back to Previous": "이전으로 돌아가기",
   "Back to previous message": "이전 메시지로 돌아가기",
   "Beta updates": "베타 업데이트",
+  "Binary/executable files are not supported": "바이너리/실행 파일은 지원되지 않습니다",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "빙 검색은 무료로 제공되지만, 제한 사항이 있을 수 있으며 Microsoft에 의해 변경될 수 있습니다.",
   "Browsing and retrieving information from the internet.": "웹 브라우징, 인터넷에서 정보 검색",
   "Builtin MCP Servers": "내장 MCP 서버",
@@ -345,6 +349,7 @@
   "Invalid provider configuration format": "잘못된 제공자 구성 형식",
   "Invalid request parameters detected. Please try again later. Persistent failures may indicate an outdated software version. Consider upgrading to access the latest performance improvements and features.": "잘못된 요청 매개변수가 감지되었습니다. 나중에 다시 시도하세요. 지속적인 실패는 오래된 소프트웨어 버전을 나타낼 수 있습니다. 최신 성능 향상 및 기능에 액세스하려면 업그레이드를 고려하세요.",
   "It only takes a few seconds and helps a lot.": "이 작업은 단 몇 초 만에 도움이 됩니다.",
+  "iWork files (Pages, Keynote) are not supported. Please export to PDF or Office format.": "iWork 파일(Pages, Keynote)은 지원되지 않습니다. PDF 또는 Office 형식으로 내보내십시오.",
   "Keep only the Top <input /> Conversations in List and Permanently Delete the Rest": "목록에서 상위 <input />개 대화만 유지하고 나머지는 영구적으로 삭제",
   "Key Combination": "단축키 조합",
   "Keyboard Shortcuts": "키보드 단축키",
@@ -706,6 +711,7 @@
   "Unlock Copilot Avatar by Upgrading to Premium Edition": "프리미엄 버전으로 업그레이드하여 동반자 아바타 잠금 해제",
   "Unsaved settings": "저장되지 않은 설정",
   "unstar": "별 표시 해제",
+  "Unsupported file type: {{fileName}}": "지원되지 않는 파일 형식: {{fileName}}",
   "Untitled": "제목 없음",
   "Update Available": "업데이트 가능",
   "Upload failed: {{error}}": "업로드 실패: {{error}}",
@@ -721,6 +727,7 @@
   "User Avatar": "사용자 아바타",
   "User Terms": "이용약관",
   "version": "버전",
+  "Video files are not supported": "동영상 파일은 지원되지 않습니다",
   "View All Copilots": "모든 동반자 보기",
   "View historical threads": "과거 스레드 보기",
   "View Message JSON": "메시지 JSON 보기",
