--- a/src/renderer/i18n/locales/nb-NO/translation.json
+++ b/src/renderer/i18n/locales/nb-NO/translation.json
@@ -54,12 +54,15 @@
   "API Mode": "API-modus",
   "api path": "API-sti",
   "API Path": "API-Sti",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Avanserte bildeformater støttes ikke. Vennligst konverter til JPG eller PNG.",
+  "Archive files are not supported. Please extract and upload individual files.": "Arkivfiler støttes ikke. Vennligst pakk ut og last opp individuelle filer.",
   "Are you sure you want to delete the knowledge base": "Er du sikker på at du vil slette kunnskapsbasen",
   "Are you sure you want to delete this server?": "Er du sikker på at du vil slette denne serveren?",
   "Arguments": "Argumenter",
   "assistant": "Assistent",
   "Attach Image": "Legg ved bilde",
   "Attach Link": "Legg ved lenke",
+  "Audio files are not supported": "Lydfiler støttes ikke",
   "Auther Message": "Hei! Jeg laget Chatbox for egen bruk, og det er fantastisk å se at så mange andre liker den! Hvis du ønsker å støtte utviklingen, setter jeg stor pris på donasjoner, selv om det er helt frivillig. Tusen takk, Benn.",
   "Authorization was rejected. Please try again if you want to login.": "Autorisasjon ble avvist. Vennligst prøv igjen hvis du ønsker å logge inn.",
   "Auto": "Auto",
@@ -81,6 +84,7 @@
   "Back to Previous": "Tilbake til forrige",
   "Back to previous message": "Tilbake til forrige melding",
   "Beta updates": "Beta oppdateringer",
+  "Binary/executable files are not supported": "Binære/kjørbare filer støttes ikke",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "Bing-søk tilbys gratis, men det kan ha begrensninger og kan endres av Microsoft.",
   "Browsing and retrieving information from the internet.": "Nettleser, søker og hentet informasjon fra internett.",
   "Builtin MCP Servers": "Innebygde MCP-servere",
@@ -345,6 +349,7 @@
   "Invalid provider configuration format": "Ugyldig leverandørkonfigurasjonsformat",
   "Invalid request parameters detected. Please try again later. Persistent failures may indicate an outdated software version. Consider upgrading to access the latest performance improvements and features.": "Ugyldige forespørselparametere oppdaget. Vennligst prøv igjen senere. Vedvarende feil kan tyde på en utdatert programvareversjon. Vurder å oppgradere for å få tilgang til de nyeste ytelsesforbedringene og funksjonene.",
   "It only takes a few seconds and helps a lot.": "Det tar bare noen sekunder og hjelper mye.",
+  "iWork files (Pages, Keynote) are not supported. Please export to PDF or Office format.": "iWork-filer (Pages, Keynote) støttes ikke. Eksporter til PDF- eller Office-format.",
   "Keep only the Top <input /> Conversations in List and Permanently Delete the Rest": "Behold kun de øverste <input /> samtalene i listen og slett resten permanent",
   "Key Combination": "Tastekombinasjon",
   "Keyboard Shortcuts": "Hurtigtaster",
@@ -705,6 +710,7 @@
   "Unlock Copilot Avatar by Upgrading to Premium Edition": "Lås opp Copilot-avatar ved å oppgradere til Premium-utgaven",
   "Unsaved settings": "Ulagrede innstillinger",
   "unstar": "Fjern fra favoritter",
+  "Unsupported file type: {{fileName}}": "Ikke-støttet filtype: {{fileName}}",
   "Untitled": "Uten tittel",
   "Update Available": "Oppdatering tilgjengelig",
   "Upload failed: {{error}}": "Opplasting mislyktes: {{error}}",
@@ -720,6 +726,7 @@
   "User Avatar": "Brukeravatar",
   "User Terms": "Brukervilkår",
   "version": "Versjon",
+  "Video files are not supported": "Videofiler støttes ikke",
   "View All Copilots": "Vis alle Copilots",
   "View historical threads": "Vis historiske tråder",
   "View Message JSON": "Vis meldings-JSON",
