--- a/src/renderer/i18n/locales/pt-PT/translation.json
+++ b/src/renderer/i18n/locales/pt-PT/translation.json
@@ -54,12 +54,15 @@
   "API Mode": "Modo API",
   "api path": "caminho da API",
   "API Path": "Caminho da API",
+  "Advanced image formats are not supported. Please convert to JPG or PNG.": "Formatos de imagem avançados não são suportados. Por favor, converta para JPG ou PNG.",
+  "Archive files are not supported. Please extract and upload individual files.": "Ficheiros de arquivo não são suportados. Por favor, extraia e carregue os ficheiros individuais.",
   "Are you sure you want to delete the knowledge base": "Tem a certeza que pretende eliminar a base de conhecimento",
   "Are you sure you want to delete this server?": "Tem a certeza que quer apagar este servidor?",
   "Arguments": "Argumentos",
   "assistant": "Assistente",
   "Attach Image": "Anexar Imagem",
   "Attach Link": "Anexar Link",
+  "Audio files are not supported": "Ficheiros de áudio não são suportados",
   "Auther Message": "“No início, só queria desenvolver uma ferramenta conveniente para uso próprio, não esperava que tantas pessoas gostassem dela! Se estiver disposto a apoiar o meu trabalho de desenvolvimento, considere fazer uma doação, muito obrigado.”",
   "Authorization was rejected. Please try again if you want to login.": "A autorização foi rejeitada. Por favor, tente novamente se quiser iniciar sessão.",
   "Auto": "Automático",
@@ -81,6 +84,7 @@
   "Back to Previous": "Voltar ao Anterior",
   "Back to previous message": "Voltar à mensagem anterior",
   "Beta updates": "Atualizações beta",
+  "Binary/executable files are not supported": "Ficheiros binários/executáveis não são suportados",
   "Bing Search is provided for free use, but it may have limitations and is subject to change by Microsoft.": "A Pesquisa Bing é disponibilizada gratuitamente, mas pode ter limitações e está sujeita a alterações pela Microsoft.",
   "Browsing and retrieving information from the internet.": "Navegação Web, procurando e obtendo informações da internet.",
   "Builtin MCP Servers": "Servidores MCP Integrados",
@@ -344,6 +348,7 @@
   "Invalid provider configuration format": "Formato de configuração do fornecedor inválido",
   "Invalid request parameters detected. Please try again later. Persistent failures may indicate an outdated software version. Consider upgrading to access the latest performance improvements and features.": "Parâmetros de pedido inválidos detectados. Por favor, tente novamente mais tarde. Falhas persistentes podem indicar uma versão de software desatualizada. Considere atualizar para aceder às últimas melhorias de desempenho e funcionalidades.",
   "It only takes a few seconds and helps a lot.": "Isso leva apenas alguns segundos e ajuda muito.",
+  "iWork files (Pages, Keynote) are not supported. Please export to PDF or Office format.": "Ficheiros iWork (Pages, Keynote) não são suportados. Por favor, exporte para o formato PDF ou Office.",
   "Keep only the Top <input /> Conversations in List and Permanently Delete the Rest": "Manter apenas as <input /> conversas mais recentes na lista e eliminar permanentemente as restantes",
   "Key Combination": "Combinação de Teclas",
   "Keyboard Shortcuts": "Atalhos de Teclado",
@@ -704,6 +709,7 @@
   "Unlock Copilot Avatar by Upgrading to Premium Edition": "Desbloqueie o avatar do copiloto ao atualizar para a edição Premium",
   "Unsaved settings": "Definições não guardadas",
   "unstar": "Desfavoritar",
+  "Unsupported file type: {{fileName}}": "Tipo de ficheiro não suportado: {{fileName}}",
   "Untitled": "Sem Título",
   "Update Available": "Atualização disponível",
   "Upload failed: {{error}}": "Carregamento falhou: {{error}}",
@@ -719,6 +725,7 @@
   "User Avatar": "Avatar do Utilizador",
   "User Terms": "Termos de Utilizador",
   "version": "Versão",
+  "Video files are not supported": "Ficheiros de vídeo não são suportados",
   "View All Copilots": "Ver Todos os Copilotos",
   "View historical threads": "Ver tópicos históricos",
   "View Message JSON": "Ver Mensagem JSON",
